the first playable version

--- a/selecthigh.html
+++ b/selecthigh.html
@@ -12,7 +12,11 @@
 		<img class="preload" src="img/cards.png"/>
 
 		<div id="card-table">
-			<button id="deal">DEAL</button>
+			<button id="btnDeal">Deal</button>
+			<button id="btnCheck">Check</button>
+			<button id="btnNewGame">New Game</button>
+			<div id="lblWinOrLose" class="labels">TEST1</div>
+			<div id="lblSelectOne" class="labels">TEST2</div>
 		</div>
 		<!-- load this at the bottom so the #card-table element exists -->
 		<script src="deckType.js"></script>
